--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "dotenv": "^16.0.1",
+    "moment": "^2.29.3",
+    "moment-timezone": "^0.5.34",
     "next": "12.1.6",
     "nprogress": "^0.2.0",
     "react": "18.1.0",
